--- a/views/views.xml
+++ b/views/views.xml
@@ -1,1 +1,18 @@
-
+<?xml version="1.0" encoding="utf-8" ?>
+<odoo>
+    <record id="fields_view_list" model="ir.ui.view">
+        <field name="name">odoo.fields list</field>
+        <field name="model">odoo.fields</field>
+        <field name="arch" type="xml">
+            <tree>
+                <field name="name"/>
+                <field name="form_no"/>
+            </tree>
+        </field>
+    </record>
+    <record model="ir.actions.act_window" id="fields_odoo_action">
+        <field name="name">odoo Fields</field>
+        <field name="res_model">odoo.fields</field>
+        <field name="view_mode">form</field>
+    </record>
+</odoo>
